minikube/chat.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatsvc-service
  labels:
    app: chatsvc
    tier: backend
    phase: test
spec:
  type: NodePort
  ports:
  - port: 30001
    nodePort: 30001
    targetPort: 30001
    name: http
  selector:
    app: chatsvc
    tier: backend
    phase: test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatsvc
spec:
  selector:
    matchLabels:
      app: chatsvc
      tier: backend
      phase: test
  replicas: 1
  template:
    metadata:
      labels:
        app: chatsvc
        tier: backend
        phase: test
    spec:
      containers:
      - name: chatsvc
        image: gambarini/grpc-demo
        imagePullPolicy: Never
        args:
        - servers/chatsvc/main.go
        ports:
        - containerPort: 30001
