minikube/contact.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-service
  labels:
    app: contact
    tier: backend
    phase: test
spec:
  type: NodePort
  ports:
  - port: 30002
    nodePort: 30002
    targetPort: 30002
    name: http
  selector:
    app: contact
    tier: backend
    phase: test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact
spec:
  selector:
    matchLabels:
      app: contact
      tier: backend
      phase: test
  replicas: 1
  template:
    metadata:
      labels:
        app: contact
        tier: backend
        phase: test
    spec:
      containers:
      - name: chat
        image: gambarini/grpc-demo
        imagePullPolicy: Never
        args:
        - contactsvc/main.go
        ports:
        - containerPort: 30002
