minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "99999"
  name: service-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /test.Test
        backend:
          serviceName: test-service
          servicePort: grpc
      - path: /chat.Chat
        backend:
          serviceName: chat-service
          servicePort: grpc
      - path: /message.Message
        backend:
          serviceName: message-service
          servicePort: grpc
